@@ -35,6 +35,9 @@
 
 	<LI>XRX comment output could crash HTMLDOC.
 
+	<LI>Fixed-width columns in tables could be resized by
+	HTMLDOC.
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.20</H2>
